--- a/css/blocks/footer.css
+++ b/css/blocks/footer.css
@@ -1,5 +1,22 @@
 .footer{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.footer-container{
+  margin-top: auto;
+}
+.footer-container__content{
+  border-top: 1px solid #353538;
+  margin-top: 63px;
+}
+.footer-container__section{
   height: 140px;
-  position: relative;
-  margin-top: 12px;
+}
+.footer__col{
+  display: flex;
+  align-items: center;
+}
+.footer__col_align_right{
+  justify-content: flex-end;
 }
