--- a/css/blocks/header.css
+++ b/css/blocks/header.css
@@ -1,5 +1,15 @@
-.header__container{
-  height: 120px;
-  position:relative;
-  margin-bottom: 156px;
+.header{
+  padding-top: 45px;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header__col{
+  display: flex;
+  align-items: center;
+  
+}
+.header__col_align_right{
+  justify-content: flex-end;
 }
