--- a/css/blocks/menu.css
+++ b/css/blocks/menu.css
@@ -1,7 +1,7 @@
-.menu{
-  position:absolute;
-  top: 47px;
-  left: 261px;
+.menu__list{
+    padding: 15px 0px;
+    margin: 0px;
+    margin-left: -9px;
 }
 .menu__item{
   display: inline-block;
