--- a/css/blocks/news.css
+++ b/css/blocks/news.css
@@ -1,35 +1,45 @@
 .news{
-  margin-bottom: 55px;
+  margin-bottom: 48px;
+  display: flex;
+  justify-content: space-between;
 }
 .news__item{
-  width: 555px;
-  display: inline-block;
-  vertical-align: top;
+  flex: 1;
+  margin-right: 2%;
+  min-height: 400px;
+  
+}
+.single-news{
   position:relative;
   border-radius: 4px;
   overflow: hidden;
 }
-.news__cover{
+.single-news__cover{
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
   opacity: .4;
 }
-.news__text-content{
+.single-news__text-content{
+  display: flex;
+  flex-direction: column;
   position: absolute;
   left: 0;
   right: 0;
   bottom: 0;
-  padding: 25px 32px;
-  min-height: 140px;
+  padding: 26px 34px;
+  min-height: 170px;
 }
-.news__date{
-  font-size: 15px;
-  margin-bottom: 18px;
+.single-news__date{
+  font-size: 14px;
+  margin-bottom: 12.5px;
 }
-.news__title{
+.single-news__title{
   font-size: 24px;
   font-weight: bold;
-  margin-bottom: 5px;
+  margin-bottom: 9px;
+}
+.single-news__desc{
+  font-size: 16px;
 }
