--- a/css/blocks/offers.css
+++ b/css/blocks/offers.css
@@ -1,79 +1,95 @@
+.offers{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
 .offers__item{
-  min-height: 470px;
+  width: calc(100% / 3 - 18px);
+}
+.offer{
+  max-height: 451px;
   background: #ffffff;
   border-radius: 4px;
-  display: inline-block;
-  margin-right: 22px;
-  width: 362px;
   color: #010001;
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
 }
-.offers__item:last-child{
+.offer__item:last-child{
   margin-right: 0;
 }
-.offers__item_theme_grey .offers__header:before{
+.offer__item_theme_grey .offer__header:before{
 background:#a5a5a4;
 }
-.offers__item_theme_blue .offers__header:before{
+.offer__item_theme_blue .offer__header:before{
 background:#556180;
 }
-.offers__item_theme_gold .offers__header:before{
+.offer__item_theme_gold .offer__header:before{
 background:#978455;
 }
-.offers__header{
+.offer__header{
   min-height: 162px;
   position: relative;
 }
-.offers__header:before{
+.offer__header:before{
   content: '';
   width: 284px;
   height: 284px;
   display: block;
   border-radius: 50%;
   position: absolute;
-  top: -142px;
-  right: -142px;
+  top: -158px;
+  right: -104px;
   background: #cccccc;
 }
-.offers__header-img{
+.offer__header-img{
   position: absolute;
   left: 50%;
   top: 50%;
   margin-left: -44px;
-  margin-top: -32px;
+  margin-top: -39px;
 }
-.offers__content{
-  padding: 36px 30px;
-  padding-top: 24px;
+.offer__content{
+  padding: 36px 24px;
+  padding-top: 27px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
-.offers__title{
+.offer__title{
   font-weight: bold;
   font-size: 24px;
-  margin-bottom: 19px;
+  margin-bottom: 7px;
+  margin-top: -5px;
+  margin-left: -2px;
 }
-.offers__prices-cell{
-  display: inline-block;
-  vertical-align: top;
-  width: 122px;
-  margin-bottom: 25px;
+.offer__prices{
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: space-between;
+  margin-right: 25px;
 }
-.offers__prices-cell{
+.offer__prices-cell{
   margin-right: 0;
 }
-.offers__price{
+.offer__price-cell_col_right{
+  margin-right: -83px;
+}
+.offer__price{
+  font-size: 36px;
+  margin: 4px -4px;
+}
+.offer__price-range{
   font-size: 36px;
 }
-.offers__price-range{
-  font-size: 30px;
-}
-.offers__price-desc{
+.offer__price-desc{
   color: #666666;
   font-weight: normal;
   font-size: 16px;
 }
-.offers__prices{
-  margin-bottom: 50px;
-}
-.offers__btn-wrapper{
-  text-align: center;
+
+.offer__btn-wrapper{
+  display: flex;
+  justify-content: center;
+  margin-top: auto;
 }
