--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
 @import url('../css/layout/base.css');
 @import url('../css/layout/normalize.css');
+@import url('../css/blocks/wrapper.css');
+@import url('../css/blocks/section.css');
+@import url('../css/blocks/btn.css');
 @import url('../css/blocks/hero.css');
 @import url('../css/blocks/header.css');
 @import url('../css/blocks/logo.css');
@@ -9,9 +12,20 @@
 @import url('../css/blocks/news.css');
 @import url('../css/blocks/pager.css');
 @import url('../css/blocks/about.css');
-@import url('../css/blocks/footer-container.css');
 @import url('../css/blocks/footer.css');
+@import url('../css/blocks/top-line.css');
+@import url('../css/blocks/page-title.css');
+@import url('../css/blocks/breadcrumbs.css');
+@import url('../css/blocks/page-content.css');
+@import url('../css/blocks/services.css');
+@import url('../css/blocks/partners.css');
+@import url('../css/blocks/inner-section.css');
+@import url('../css/blocks/inner-footer.css');
 @import url('../css/blocks/socials.css');
+
+
+
+
 
 
 
