--- a/css/blocks/about.css
+++ b/css/blocks/about.css
@@ -11,6 +11,8 @@
   height: 502px;
   background: url('../../img/chess.jpg') center center / cover no-repeat;
   margin-top: 17px;
+  z-index: 0;
+  position: relative;
 }
 .about__desc{
   background: #202123;
@@ -18,6 +20,8 @@
   max-width: 780px;
   margin-left: -137px;
   margin-top: 114px;
+  z-index: 1;
+  position: relative;
 }
 .about__title{
   font-weight: bold;
