--- a/css/blocks/services.css
+++ b/css/blocks/services.css
@@ -20,11 +20,15 @@
 .service__img{
   width: 41%;
   margin-right: 4%;
-  padding-right: 12px;
+  padding-right: 14px;
+  height: 340px;
   
 }
 .service__img-elem{
   width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 .service__content{
   flex: 1;
