--- a/css/blocks/top-line.css
+++ b/css/blocks/top-line.css
@@ -1,6 +1,6 @@
 .top-line{
   min-height: 415px;
-  background: url("./img/lion-head-wide.jpg") center top no-repeat;
+  background: url("../../img/lion-head-wide.jpg") center top no-repeat;
   display: flex;
   flex-direction: column;
   padding-bottom: 24px;
