--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,8 @@
 @import url('../css/blocks/inner-section.css');
 @import url('../css/blocks/inner-footer.css');
 @import url('../css/blocks/socials.css');
+@import url('../css/blocks/dropdown.css');
+
 
 
 
