--- a/css/blocks/inner-section.css
+++ b/css/blocks/inner-section.css
@@ -5,6 +5,9 @@
   color: #202020;
   padding: 98px 0;
 }
+.inner-section__reviews{
+  padding: 55px 0 108px;
+}
 .inner-section_bg_grey{
   background: #f4f5f5;
 }
@@ -13,4 +16,7 @@
   font-weight: bold;
   margin-bottom: 63px;
   margin-top: 15px;
+}
+.inner-section__reviews-title{
+  margin-bottom: 46px;
 }
