--- a/css/main.css
+++ b/css/main.css
@@ -22,7 +22,13 @@
 @import url('../css/blocks/inner-section.css');
 @import url('../css/blocks/inner-footer.css');
 @import url('../css/blocks/socials.css');
-@import url('../css/blocks/dropdown.css');
+@import url('../css/blocks/reviews.css');
+@import url('../css/blocks/avatar.css');
+@import url('../css/blocks/tag.css');
+@import url('../css/blocks/separator.css');
+@import url('../css/blocks/form.css');
+@import url('../css/blocks/controls.css');
+
 
 
 
