--- a/css/blocks/socials.css
+++ b/css/blocks/socials.css
@@ -9,6 +9,11 @@
   width: 36px;
   height: 36px;
   background:url('../../img/socials_sprites.png') center center no-repeat;
+  opacity: 1;
+}
+.socials__item:hover{
+  opacity: .5;
+  cursor: pointer;
 }
 .socials__item:last-child{
   margin-right: 0;
