--- a/css/blocks/form.css
+++ b/css/blocks/form.css
@@ -12,9 +12,10 @@
   font-size: 18px;
   color: #1A1B1E;
   outline: none;
+  border: 1px solid transparent;
 }
 .form__input:focus{
-  border: 1px solid #E5C288;
+  border-color: #E5C288;
 }
 .form__input::placeholder{
   color: #666;
